# platform.core.api.maps-service

./: .gitignore  CMakeLists.txt  capi-maps-service.changes  capi-maps-service.pc.in
doc/: map_view_doc.h  maps_plugin_doc.h  maps_service_doc.h
include/: map_event_data.h  map_gesture.h  map_object.h  map_object_plugin.h  map_snapshot.h  map_view.h  map_view_event_data.h  map_view_object.h  map_view_plugin.h  maps_address.h  maps_area.h  maps_coord_list.h  maps_coordinates.h  maps_error.h  maps_extra_types.h  maps_place.h  maps_place_attribute.h  maps_place_attribute_plugin.h  maps_place_category.h  maps_place_category_plugin.h  maps_place_contact.h  maps_place_contact_plugin.h  maps_place_editorial.h  maps_place_editorial_plugin.h  maps_place_filter.h  maps_place_image.h  maps_place_image_plugin.h  maps_place_link_object.h  maps_place_link_object_plugin.h  maps_place_media.h  maps_place_media_plugin.h  maps_place_plugin.h  maps_place_rating.h  maps_place_rating_plugin.h  maps_place_review.h  maps_place_review_plugin.h  maps_place_url.h  maps_place_url_plugin.h  maps_plugin.h  maps_plugin_info.h  (+17 more)
lib/: libmaps-plugin-test.so.0
packaging/: capi-maps-service.spec
src/: maps_util.cpp  maps_util.h
src/api/: map_event_data.cpp  map_object.cpp  map_view.cpp  map_view_event_data.cpp  map_view_object.cpp  maps_address.cpp  maps_address_private.h  maps_area.cpp  maps_area_private.h  maps_condition.cpp  maps_condition.h  maps_coord_list.cpp  maps_coordinates.cpp  maps_coordinates_private.h  maps_extra_types.cpp  maps_extra_types_private.h  maps_place.cpp  maps_place_attribute.cpp  maps_place_category.cpp  maps_place_contact.cpp  maps_place_editorial.cpp  maps_place_filter.cpp  maps_place_image.cpp  maps_place_link_object.cpp  maps_place_media.cpp  maps_place_private.h  maps_place_rating.cpp  maps_place_review.cpp  maps_place_url.cpp  maps_plugin_info.cpp  maps_preference.cpp  maps_route.cpp  maps_route_maneuver.cpp  maps_route_private.h  maps_route_segment.cpp  maps_route_segment_private.h  maps_service.cpp  maps_view.cpp  maps_view_event_data.cpp  maps_view_object.cpp  (+1 more)
src/plugin/: discovery.cpp  discovery.h  discovery.h.my  empty_module.cpp  empty_module.h  module.cpp  module.cpp.my  module.h
src/session/: command.cpp  command.h  command_queue.cpp  command_queue.h  commands.cpp  commands.h  thread.cpp  thread.h
src/view/: gesture_detector.cpp  gesture_detector.h  gesture_detector_script.cpp  gesture_detector_script.h  gesture_detector_statemachine.cpp  gesture_detector_statemachine.h  gesture_processor.cpp  gesture_processor.h  inertial_camera.cpp  inertial_camera.h  inertial_gesture.cpp  inertial_gesture.h  marker_constructor.cpp  marker_constructor.h  overlay_constructor.cpp  overlay_constructor.h  poly_shape_hit_test.cpp  poly_shape_hit_test.h  polygon_constructor.cpp  polygon_constructor.h  polyline_constructor.cpp  polyline_constructor.h  route_constructor.cpp  route_constructor.h  runtime_data.cpp  runtime_data.h
src/view/tilt/: inertial_camera.cpp  inertial_camera.h
test/: CMakeLists.txt  capi-maps-service-test.efl  capi-maps-service-test.manifest  capi-maps-service-test.xml  maps-service-test.manifest  maps-service-test.rule  memleak_test.sh
test/dummy_plugin/: CMakeLists.txt  dummy_plugin.cpp  dummy_route_constructor.cpp  dummy_route_constructor.h
test/src/: maps_service_test.cpp
test/src/api/: map_event_data_test.cpp  map_event_data_test.h  map_object_test.cpp  map_object_test.h  map_view_object_test.cpp  map_view_object_test.h  map_view_test.cpp  map_view_test.h  maps_address_test.cpp  maps_address_test.h  maps_api_test.cpp  maps_api_test.h  maps_area_test.cpp  maps_area_test.h  maps_coordinates_test.cpp  maps_coordinates_test.h  maps_extra_types_test.cpp  maps_extra_types_test.h  maps_place_attribute_test.cpp  maps_place_attribute_test.h  maps_place_category_test.cpp  maps_place_category_test.h  maps_place_contact_test.cpp  maps_place_contact_test.h  maps_place_editorial_test.cpp  maps_place_editorial_test.h  maps_place_filter_test.cpp  maps_place_filter_test.h  maps_place_image_test.cpp  maps_place_image_test.h  maps_place_link_object_test.cpp  maps_place_link_object_test.h  maps_place_media_test.cpp  maps_place_media_test.h  maps_place_rating_test.cpp  maps_place_rating_test.h  maps_place_review_test.cpp  maps_place_review_test.h  maps_place_test.cpp  maps_place_test.h  (+16 more)
test/src/plugin/: discovery_test.cpp  discovery_test.h  module_test.cpp  module_test.h
test/src/session/: command_queue_test.cpp  command_queue_test.h  command_test.cpp  command_test.h  commands_test.cpp  commands_test.h  thread_test.cpp  thread_test.h
test/src/tutorial/: maps_service_tutorial.cpp  maps_service_tutorial.h
test/src/util/: maps_object.cpp  maps_object.h  maps_test_utils.cpp  maps_test_utils.h
test/src/view/: gesture_test.cpp  gesture_test.h  marker_constructor_test.cpp  marker_constructor_test.h  poly_shape_hit_test_test.cpp  poly_shape_hit_test_test.h  polygon_constructor_test.cpp  polygon_constructor_test.h  polyline_constructor_test.cpp  polyline_constructor_test.h  route_constructor_test.cpp  route_constructor_test.h
