SET(DUMMY_PLUGIN "maps-plugin-test")

SET(DUMMY_PLUGIN_SRC
	dummy_plugin.cpp
	dummy_route_constructor.cpp
	../src/util/maps_object.cpp
	)

INCLUDE(FindPkgConfig)
pkg_check_modules(${DUMMY_PLUGIN} REQUIRED)
FOREACH(flag ${${DUMMY_PLUGIN}_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -Wall -Werror")

ADD_LIBRARY(${DUMMY_PLUGIN} SHARED ${DUMMY_PLUGIN_SRC})
SET_TARGET_PROPERTIES(${DUMMY_PLUGIN}
	PROPERTIES
	VERSION ${FULLVER}
	SOVERSION ${MAJORVER}
	CLEAN_DIRECT_OUTPUT 1
	)

TARGET_LINK_LIBRARIES(${DUMMY_PLUGIN} ${fw_name} ${${DUMMY_PLUGIN}_LDFLAGS})

INSTALL(TARGETS ${DUMMY_PLUGIN} DESTINATION ${LIBDIR}/maps/plugins)
